feat: Add core backend dependencies, Angular SSR setup, and a data event service.

--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>HELP Uni Ticket Concert</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="help-university-logo-png_noTrnsprnt.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+    />
+    <!-- Midtrans Snap Sandbox -->
+    <script
+      type="text/javascript"
+      src="https://app.sandbox.midtrans.com/snap/snap.js"
+      data-client-key="Mid-client-SIlf4G2c29N-Srdz"
+    ></script>
+  </head>
 
-<head>
-   <meta charset="utf-8" />
-   <title>HELP Uni Ticket Concert</title>
-   <base href="/" />
-   <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <link rel="icon" type="image/x-icon" href="help-university-logo-png_noTrnsprnt.png" />
-   <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <link rel="icon" type="image/x-icon" href="favicon.ico" />
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
-</head>
-
-<body>
-   <app-root></app-root>
-</body>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
